# Android-Assembly-Native-Activity

.github/workflows/: build.yml
app/: CMakeLists.txt  build.gradle.kts
app/src/main/cpp/: native_glue.c
app/src/main/cpp/asm/: main_asm.S
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
