cmake_minimum_required(VERSION 3.22.1)

project(AssemblyNativeActivity C ASM)

enable_language(ASM)

set(CMAKE_ASM_FLAGS "${CMAKE_ASM_FLAGS} -march=armv8-a+simd")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -march=armv8-a+simd")

find_library(log-lib log)
find_library(android-lib android)

add_library(
    AssemblyNativeActivity
    SHARED
    src/main/cpp/asm/main_asm.S
    src/main/cpp/native_glue.c
)

target_link_libraries(
    AssemblyNativeActivity
    ${log-lib}
    ${android-lib}
    android
    log
)
